--- a/Investrosite/Web.config
+++ b/Investrosite/Web.config
@@ -61,4 +61,9 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="investrositeEntities" connectionString="metadata=res://*/Models.Database.Model1.csdl|res://*/Models.Database.Model1.ssdl|res://*/Models.Database.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-S04T0MM;initial catalog=investrosite;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Entities" connectionString="metadata=res://*/Models.Database.Model1.csdl|res://*/Models.Database.Model1.ssdl|res://*/Models.Database.Model1.msl;provider=System.Data.SqlClient;provider connection string='data source=DESKTOP-S04T0MM;initial catalog=&quot;C:\USERS\DIGAN\DOCUMENTS\CANTEEN MANAGEMENT SYSTEM.MDF&quot;;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" />
+    <add name="investrositeEntities1" connectionString="metadata=res://*/Models.Database.Model1.csdl|res://*/Models.Database.Model1.ssdl|res://*/Models.Database.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-S04T0MM;initial catalog=investrosite;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
