--- a/Investrosite/Investrosite.csproj
+++ b/Investrosite/Investrosite.csproj
@@ -167,9 +167,6 @@
     <Compile Include="Models\Database\Post.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Database\User.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -265,6 +262,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\user\Register.cshtml" />
     <Content Include="Views\user\login.cshtml" />
+    <Content Include="Views\Home\post.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
