--- a/Investrosite/Investrosite.csproj
+++ b/Investrosite/Investrosite.csproj
@@ -140,6 +140,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Database\Commnet.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Database\Entrepreneur.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -163,6 +166,9 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Database\Payment.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Database\Post.cs">
       <DependentUpon>Model1.tt</DependentUpon>
@@ -263,6 +269,8 @@
     <Content Include="Views\user\Register.cshtml" />
     <Content Include="Views\user\login.cshtml" />
     <Content Include="Views\Home\post.cshtml" />
+    <Content Include="Views\user\editprofile.cshtml" />
+    <Content Include="Views\user\mypost.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
