--- a/Investrosite/Investrosite.csproj
+++ b/Investrosite/Investrosite.csproj
@@ -282,6 +282,10 @@
     <Content Include="Views\Admin\CreateManager.cshtml" />
     <Content Include="Views\Admin\Adminlist.cshtml" />
     <Content Include="Views\Admin\CreateAdmin.cshtml" />
+    <Content Include="Views\Admin\DeleteAdmin.cshtml" />
+    <Content Include="Views\Admin\DeleteEntrepreneur.cshtml" />
+    <Content Include="Views\Admin\DeleteInvestor.cshtml" />
+    <Content Include="Views\Admin\DeleteManager.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
